<resources>
    <string name="app_name">SourceManagement</string>
    <string name="action_settings">Settings</string>
    <string name="CHL">CLICK HERE TO LOGIN</string>
    <string name="ok">OK</string>
    <string name="cnc">CANCEL</string>
    <string name="title_activity_register">RegisterAct</string>
    <string name="hpp">help?</string>
    <string name="fn">First Name:</string>
    <string name="fne">Enter Your First Name</string>
    <string name="sn">Middle Name:</string>
    <string name="sne">Enter your middle name</string>
    <string name="tn">Last Name:</string>
    <string name="tne">Enter Your Initial</string>
    <string name="age">Age:</string>
    <string name="ane">Enter Your Age</string>
    <string name="sex">Choose Your Sex:</string>
    <string name="sexx">Choose Your Gender</string>
    <string name="m">Male</string>
    <string name="fm">Female</string>
    <string name="addr">Address:</string>
    <string name="hmno">Home No</string>
    <string name="hmnos">Home No:</string>
    <string name="h">Enter Home Number</string>
    <string name="st">Street:</string>
    <string name="stt">Enter Street</string>
    <string name="Ct">City:</string>
    <string name="ctt">Enter City</string>
    <string name="state">State:</string>
    <string name="sta">Enter Your State</string>
    <string name="pin">Pincode:</string>
    <string name="pincode">Enter Your Pincode</string>
    <string name="email">Enter email Id</string>
    <string name="pass">Enter Password</string>
    <string name="ps">Password:</string>
    <string name="cps">Confirm Password:</string>
    <string name="cpss">Confirm Your Password</string>
    <string name="em">EmailId:</string>
    <string name="title_activity_source_main">SourceMainAct</string>
    <string name="title_activity_income">IncomeAct</string>
    <string name="title_activity_expense">ExpenseAct</string>
    <string name="title_activity_card">CardAct</string>
    <string name="title_activity_setting">SettingAct</string>
    <string name="title_activity_report">ReportAct</string>
    <string name="title_activity_balance">BalanceAct</string>
    <string name="EUN">Enter User Name</string>
    <string name="EP">Enter Password</string>
    <string name="reg">New User :</string>
    <string name="kkk">Create Account</string>
    <string name="kkkk">CREATE</string>
    <string name="bal">Balance</string>
    <string name="rep">Report</string>
    <string name="set">Settings</string>
    <string name="card">Card</string>
    <string name="exp">Expense</string>
    <string name="income">Income</string>
    <string name="sl">Source List</string>
    <string name="inamt">Enter Income Amout" " :</string>
    <string name="iname">Enter Income Name"  "  :</string>
    <string name="idate">Enter Income Date"    "  :</string>
    <string name="icur">Choose Currency"      " :</string>
    <string name="icard">Choose Income Card:       </string>
    <string name="showAll">ShowAll</string>
    <string name="title_activity_income_display">IncomeDisplay</string>
    <string name="incomeDisplay">Income Display</string>
    <string name="lg">Logout</string>
    <string name="print">Print All</string>
    <string name="byname">By Amount</string>
    <string name="byDate">By Date</string>
    <string name="byCard">By Card</string>
    <string name="byCur">By Currency</string>
    <string name="newExpense">New Expense</string>
    <string name="delExpense">Delete</string>
    <string name="title_activity_expense_display">ExpenseDisplay</string>
    <string name="expDisplay">Expense Display</string>
    <string name="byIncomeName">By Income</string>
    <string name="byExpense">By Expense</string>
    <string name="delCard">Delete Card</string>
    <string name="newCard">New Card</string>
    <string name="listCard">List Cards</string>
    <string name="title_activity_card_display">CardDisplay</string>
    <string name="cD">Card Display</string>
    <string name="listByCard">By Card</string>
    <string name="newCurrency">New Currency</string>
    <string name="listCurrency">List All Currency</string>
    <string name="listExpense">Expense Details</string>
    <string name="crd">By Cash</string>
    <string name="title_activity_income_details">IncomeDetailsAct</string>
    <string name="title_activity_expense_details">ExpenseDetailsAct</string>
    <string name="del">Delete</string>
    <string name="aboutApp">About Application</string>
    <string name="aboutAuthor">About Author</string>
    <string name="feedback">Feedback</string>
    <string name="title_activity_about_app">AboutAppAct</string>
    <string name="help">Help</string>
    <string name="appName">Source Management</string>
    <string name="appNames">This an application developed by:</string>
    <string name="appAuthor">Kiran Kumar</string>
    <string name="gmail">kiran.kiranjmps@gmail.com</string>
    <string name="title_activity_feedback">FeedbackAct</string>
    <string name="title_feedback">Feedback</string>
    <string name="PC">Pie Chart</string>
    <string name="BC">Bar Chart</string>
    <string name="title_activity_pie">PieAct</string>
    <string name="title_activity_bar">BarAct</string>
    <string name="barChart">Bar Chart</string>
    <string name="pieChart">Pie Chart</string>
    <string name="clk">Click Income/Expense Button To View</string>
    <string name="title_activity_bar_chart_navigation">BarChartNavigationAct</string>
    <string name="delAll">Delete All</string>
    <string name="Rs">\u20B9</string>
    <string name="title_activity_balance_details">BalanceDetailsAct</string>
</resources>
