<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hpp"
            android:id="@+id/b3"
            android:textSize="15dp"
            android:layout_marginLeft="270dp"
            android:textColor="#2196F3"
            android:background="#FFFFFF"
            android:textStyle="italic"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fn"
            android:id="@+id/tv1"
            android:textColor="#000000"
            android:textStyle="italic|bold"
            android:textAlignment="textStart"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et4"
            android:hint="@string/fne"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sn"
            android:id="@+id/tv2"
            android:textColor="#000000"
            android:textStyle="italic|bold"
            android:textAlignment="textStart"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et5"
            android:hint="@string/sne"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tn"
            android:id="@+id/tv3"
            android:textColor="#000000"
            android:textStyle="italic|bold"
            android:textAlignment="textStart"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et6"
            android:hint="@string/tne"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:id="@+id/tv4"
            android:textColor="#000000"
            android:textStyle="italic|bold"
            android:textAlignment="textStart"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et7"
            android:hint="@string/ane"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sexx"
            android:id="@+id/tv5"
            android:textColor="#000000"
            android:textStyle="italic|bold"
            android:textAlignment="textStart"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/rdg">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"
                android:layout_marginRight="100dp"
                android:id="@+id/rd1" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fm"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"
                android:id="@+id/rd2" />
        </RadioGroup>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addr"
            android:id="@+id/tv6"
            android:textColor="#000000"
            android:textStyle="italic|bold"
            android:textAlignment="textStart"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/hmnos"
                android:textStyle="italic"
                android:textColor="#000000"
                android:textAlignment="textEnd"/>
            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/h"
                android:id="@+id/et8"
                android:textAlignment="textStart"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/st"
                android:textStyle="italic"
                android:textColor="#000000"
                android:textAlignment="textEnd"/>
            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/stt"
                android:id="@+id/et9"
                android:textAlignment="textStart"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/Ct"
                android:textStyle="italic"
                android:textColor="#000000"
                android:textAlignment="textEnd"/>
            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/ctt"
                android:id="@+id/et10"
                android:textAlignment="textStart"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/state"
                android:textStyle="italic"
                android:textColor="#000000"
                android:textAlignment="textEnd"/>
            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/sta"
                android:id="@+id/et11"
                android:textAlignment="textStart"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/pin"
                android:textStyle="italic"
                android:textColor="#000000"
                android:textAlignment="textEnd"/>
            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/pincode"
                android:id="@+id/et12"
                android:textAlignment="textStart"/>

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/em"
            android:id="@+id/tv7"
            android:textColor="#000000"
            android:textStyle="italic|bold"
            android:textAlignment="textStart"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et13"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ps"
            android:id="@+id/tv8"
            android:textColor="#000000"
            android:textStyle="italic|bold"
            android:textAlignment="textStart"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et14"
            android:inputType="textPassword"
            android:password="true"
            android:hint="@string/pass"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cps"
            android:id="@+id/tv9"
            android:textColor="#000000"
            android:textStyle="italic|bold"
            android:textAlignment="textStart"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et15"
            android:inputType="textPassword"
            android:password="true"
            android:hint="@string/cpss"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="horizontal">
            <Button
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:id="@+id/b1"
                android:text="@string/ok"
                android:textColor="#000000"
                android:textStyle="bold"
                android:background="#2196F3"/>
            <Button
                android:layout_width="130dp"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:id="@+id/b2"
                android:layout_marginLeft="20dp"
                android:textColor="#000000"
                android:background="#2196F3"
                android:text="@string/cnc"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>
