<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.kiran.sourcemanagement.MainActivity">
    <item
        android:id="@+id/print"
        android:orderInCategory="100"
        android:title="@string/print"
        app:showAsAction="never" />
    <item
        android:id="@+id/byAmount"
        android:orderInCategory="100"
        android:title="@string/byname"
        app:showAsAction="never"/>
    <item
        android:id="@+id/byDate"
        android:orderInCategory="100"
        android:title="@string/byDate"
        app:showAsAction="never" />

    <item
        android:id="@+id/lg"
        android:orderInCategory="100"
        android:title="@string/lg"
        app:showAsAction="never" />

</menu>
