<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.kiran.sourcemanagement.MainActivity">
        <item
            android:id="@+id/aboutApp"
            android:orderInCategory="100"
            android:title="@string/aboutApp"
            app:showAsAction="never" />
        <item
            android:id="@+id/aboutAuthor"
            android:orderInCategory="100"
            android:title="@string/aboutAuthor"
            app:showAsAction="never"/>
        <item
            android:id="@+id/feedback"
            android:orderInCategory="100"
            android:title="@string/feedback"
            app:showAsAction="never"/>
        <item
            android:id="@+id/lg"
            android:orderInCategory="100"
            android:title="@string/lg"
            app:showAsAction="never"/>
</menu>