<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:src="@drawable/login"
        android:scaleType="center"
        android:background="#FFFFBB33"
        android:contentDescription="@string/app_name"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userId"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:inputType="textEmailAddress"
        android:hint="@string/EUN"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pwd"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:inputType="textPassword"
        android:password="true"
        android:hint="@string/EP"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:textAlignment="textEnd"
            android:textColor="#000000"
            android:text="@string/reg"
            android:id="@+id/tv1" />
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/et1"
            android:textColor="#2196F3"
            android:textAlignment="textStart"
            android:text="@string/kkkk"
            android:background="#FFFFFF"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="20dp"
        android:paddingBottom="4dp"
        android:paddingLeft="50dp"
        android:dividerPadding="20dp"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:id="@+id/b1"
            android:text="@string/ok"
            android:textColor="#000000"
            android:textStyle="bold"
            android:background="#2196F3"/>
        <Button
            android:layout_width="wrap_content"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:id="@+id/b2"
            android:layout_marginLeft="40dp"
            android:textColor="#000000"
            android:background="#2196F3"
            android:text="@string/cnc"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>
