<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ImageView
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:background="@drawable/shravan"
        android:layout_gravity="center"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:gravity="center"
         android:layout_marginTop="15sp"
         android:textColor="#000"
         android:text="@string/appNames"
         android:textSize="15sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="#000"
        android:layout_marginTop="15sp"
        android:text="@string/appAuthor"
        android:textStyle="bold|italic"
        android:textSize="15sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:id="@+id/text1"
        android:layout_marginTop="20sp"
        android:textSize="15sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#607D8B"
        android:id="@+id/text2"
        android:text="@string/gmail"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="bold|italic"
        android:layout_marginTop="15sp"
        android:textSize="15sp"/>

</LinearLayout>
