<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="20sp"

    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:layout_marginTop="80sp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:id="@+id/iamt"
            android:text="@string/inamt"
            android:textAlignment="textStart"
            android:textStyle="normal"
            android:textColor="#000000"
            />
        <Button
            android:layout_width="110sp"
            android:layout_height="wrap_content"
            android:onClick="amount"
            android:background="@color/kiran"
            android:textAlignment="center"
            android:padding="5sp"
            android:text="Amount"
            android:id="@+id/bt1"
            android:textStyle="bold"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25sp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:id="@+id/iname"
            android:text="@string/iname"
            android:textAlignment="textStart"
            android:textStyle="normal"
            android:textColor="#000000"
            />
        <Button
            android:layout_width="110sp"
            android:layout_height="wrap_content"
            android:onClick="name"
            android:textAlignment="center"
            android:text="Name"
            android:background="@color/kiran"
            android:id="@+id/bt2"
            android:textStyle="bold"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25sp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:id="@+id/idate"
            android:text="@string/idate"
            android:textAlignment="textStart"
            android:textStyle="normal"
            android:textColor="#000000"
            />
        <Button
            android:layout_width="115sp"
            android:layout_height="wrap_content"
            android:onClick="idate"
            android:text="Date"
            android:background="@color/kiran"
            android:textAlignment="center"
            android:id="@+id/bt3"
            android:textStyle="bold"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25sp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:id="@+id/icur"
            android:text="@string/icur"
            android:textAlignment="textStart"
            android:textStyle="normal"
            android:textColor="#000000"
            />
        <Button
            android:layout_width="115sp"
            android:layout_height="wrap_content"
            android:onClick="icur"
            android:textAlignment="center"
            android:text="Currency"
            android:background="@color/kiran"
            android:id="@+id/bt4"
            android:textStyle="bold"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25sp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:id="@+id/icard"
            android:text="@string/icard"
            android:textAlignment="textStart"
            android:textStyle="normal"
            android:textColor="#000000"
            />
        <Button
            android:layout_width="115sp"
            android:layout_height="wrap_content"
            android:onClick="icard"
            android:background="@color/kiran"
            android:textAlignment="center"
            android:text="Card"
            android:id="@+id/bt5"
            android:textStyle="bold"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:text="Submit"
        android:background="@color/kiran"
        android:onClick="submit"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
